# ChangeLog for dev-python/pyrax
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyrax/ChangeLog,v 1.20 2015/04/18 21:10:30 mrueg Exp $

  18 Apr 2015; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
  Drop unused USEflag in metadata.

  18 Apr 2015; Alex Brandt <alunduil@gentoo.org> -pyrax-1.7.2.ebuild,
  metadata.xml:
  remove version 1.7.2

*pyrax-1.9.4 (18 Apr 2015)

  18 Apr 2015; Alex Brandt <alunduil@gentoo.org> +pyrax-1.9.4.ebuild,
  metadata.xml:
  add version 1.9.4

  26 Nov 2014; Alex Brandt <alunduil@gentoo.org> -pyrax-1.3.6.ebuild,
  -pyrax-1.4.3.ebuild, -pyrax-1.4.7-r1.ebuild, -pyrax-1.4.7.ebuild,
  -pyrax-1.6.1.ebuild:
  prune pyrax versions—keep three

  26 Nov 2014; Alex Brandt <alunduil@gentoo.org> metadata.xml:
  add alunduil as maintainer

*pyrax-1.9.3 (24 Nov 2014)

  24 Nov 2014; Alex Brandt <alunduil@gentoo.org> +pyrax-1.9.3.ebuild:
  add version 1.9.3

*pyrax-1.9.2 (01 Nov 2014)

  01 Nov 2014; Alex Brandt <alunduil@gentoo.org> +pyrax-1.9.2.ebuild:
  add version 1.9.2

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> pyrax-1.3.6.ebuild,
  pyrax-1.4.3.ebuild, pyrax-1.4.7-r1.ebuild, pyrax-1.4.7.ebuild,
  pyrax-9999.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*pyrax-1.7.2 (01 Apr 2014)

  01 Apr 2014; Matthew Thode <prometheanfire@gentoo.org> +pyrax-1.7.2.ebuild:
  bup!

  17 Nov 2013; Matthew Thode <prometheanfire@gentoo.org> pyrax-1.6.1.ebuild:
  1.6.1 with restricted tests due to upstream bug

*pyrax-1.6.1 (09 Nov 2013)

  09 Nov 2013; Matthew Thode <prometheanfire@gentoo.org> +pyrax-1.6.1.ebuild:
  update of pyrax to 1.6.1

  11 Aug 2013; Patrick Lauer <patrick@gentoo.org> pyrax-1.3.6.ebuild,
  pyrax-1.4.3.ebuild, pyrax-1.4.7-r1.ebuild, pyrax-1.4.7.ebuild,
  pyrax-9999.ebuild:
  Fixing python_targets as python-swiftclient lost 2.6 support
