@@ -1,9 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST pyrax-1.9.2.tar.gz 311901 SHA256 1971dd941cc750815a0b51d3b0ed6a30cfa9f1dcc562bca808b0708b9ffed8ed SHA512 e095349c42709e5cc382f4d90de2711d6ac53b1d41dd34c3969ed4423f8c5534ff902d78cfae71f6cb7bb4200fd1ab66305ebf43ab03b0c928580b34c06bc1ef WHIRLPOOL eec8a1aa3f99f39f5a461e40e64b23854313ca4ae8a8ef76ab78e103ce4b62a07531f019246a459e65cf6b5a0f67d582f316af3f5ebbec9dbb307a2c589c5182
 DIST pyrax-1.9.3.tar.gz 307959 SHA256 0a3026c67df7bb84720cf562eef0fb15ad67dce79b6fc5e8da46621489be26bb SHA512 8ffb641e46d2f9cda079f619303f92c65fd41cf2ad773c5e8da981257fe9d4aac94e9bc08fab53e3b0a9b63a661381ff7805cbfd34ddef3275cba2d69858aa69 WHIRLPOOL 9060febb5b9d90cea5b248acf73af162df7b4badd66462916fd7e63f875edacde046c83fced1f5f03e500a1ca9d9f74fd746927d1c42942a561d002caa316d3d
 DIST pyrax-1.9.4.tar.gz 312608 SHA256 5cc27688cccd4137a4c53a69b6e0e877054a0bafec899f8170ccc0b58fbf95f3 SHA512 be84e558095a7f76998dd7909cfa5f1ef97a1d65a5a3fe168d70e3978a5974b4eb1592690aac7b0bd52b09faed79fca52006b17e5a22008850088a953d5bef72 WHIRLPOOL ae1c5ae01bbe704404e589a3a1bf1b12abc77817bbdf6e879301dd0716b1f84aa80903ec1d5b4035eacca81221680d8fd44cf0112081a5aff6f4abfbf5973b7d
 EBUILD pyrax-1.9.2.ebuild 1383 SHA256 ac364801f8df97e042c53d1702ab93b00c96fa2f0e8a769e14330294b1c87548 SHA512 fb3ece5f48228cb3c978534d6b0953b224bb149f300bc8f75961685971e8469c886394629444bbb62ea045f6f25db52ef0bf135d27ba9af86db0745191fd1b24 WHIRLPOOL 2e3836763d419e97b6f65193e9dc50c673db588e53c261f52fbb0fee929213ee3b5d41dc17a0372f9741ff03c2dfb3cfb5f00bce13a158a59b82ac21d2861938
 EBUILD pyrax-1.9.3.ebuild 1351 SHA256 237e892b9cf7aebfa3161f7a0121342996d9c55a326b57ba6e8cc33754ae20e0 SHA512 2154673b0dacc8372e87f2b49b513b05295a7d402443359a8e88531b44beecf9f1d2f49a35ee804f2e52096370ca5ca6cd0ea7787ac2a6de073dc101d0a35ed0 WHIRLPOOL c5867f91a205682fefb655be33f6b8d23972a4cecdbd840224ce30dea0774372729991c6dc073e91e396e388b5a609f0eac25f509bc2e43432cc41f74fc7bd1a
 EBUILD pyrax-1.9.4.ebuild 1188 SHA256 2abdc926b7f73f53a4a4081e8d159bcafef70b8c3f484643d2d26fed2bbd53b7 SHA512 a3e365615bcdf64efcfd9b66d4345bd503d6067051aaf5d95ee67c380ac26fdd6b14fb09de3a012cadb23de7043a0e80c2383d233e2fc86fa830ff6a15ee6510 WHIRLPOOL c2181d33ad7807425b6c0c11df21fd64f4ab04eb84a7492a57f91a68db372ca84e85d1420c1d862b85dfb476e0f27de3bee5d91e07573d5b9dda5635c70595fc
-EBUILD pyrax-9999.ebuild 1107 SHA256 37c2c35a49eab5b8545a7d67fa005befe6733371cbe94e623265a5e7c37066c7 SHA512 c92d9d79318213575318c3d760208ededfdab3734b9654be6cf038ac15e0a2175edf97f904c4c641f44f9bec07fd239d390f87917c631567f1cfe2cb414516f3 WHIRLPOOL 4065ac78648170348283d9aa31078f2e46b6515946cfab3beb7a28eb6c0cbcfc0ab31b8ed99b30e5dd02f6115726dfccb5b69dde33a47151a065aee2a18b3711
-MISC ChangeLog 3312 SHA256 eaca7a4d0b333182e49ba2d09ee757257b6e474ab19cb91c1a5135247ffbd38b SHA512 e7f684b5072250af1140158140282c4bd87b42410c5ada343cdf2a3f5b68035f62be60187163aa5f420b2cfa305606b5a384defbae47936a9121c42da7cd4e0a WHIRLPOOL f08e2d81c95d309d8723eb78221f1dcdd8e5512c5f4a44ab3e0683edc0b57d220070e333f150fb173645db113ec8604ec27ccc3324cb8c488e04564a78b3666f
+MISC ChangeLog 3407 SHA256 0121df04fd3efbdfa1cd851b09af1d24724699aaa71ad70e79058a561b6a020e SHA512 28cccdbe7940f61b2610bb03814595d4d5ea34b670d451844d9f7cf518038807aa1628044b678a07d2bb0f5126b7e43947374ff25fd9e68748f07efdfe50982e WHIRLPOOL 3665098724a73cacd5ce080e68cb90065079e3d334fcbcda738e9dad88e45980aaaecba1877809391527214c00f1f78831c1cb8782df5da4566dce1ec79d4eb5
 MISC metadata.xml 586 SHA256 0342cddd6010581886431609dfd9d2219a820a0d8f397e35c6e62bcfd9a6d75f SHA512 7493a79c7f3c02e86e9d8d7dc00f8610dcac9ceec4d2cc0fc1ba0ceab63ba7a845ce5660cd29de8b59700bef7e181241828ffe00332a7a21a18e685479bc6d25 WHIRLPOOL 403798b01dd736ad7b2bb2ca9716ed5abba2965be30ef479d60d5bafe7908e66d7628c71e49448c71b64fdbd8a1f570f6efbf5f992ba73c546f0f19a5e90d32b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJVNAfJAAoJECZUyt4RqCF82LoP/0VZQw2ukvhFMo8wi4pRDLjv
+2LDc4jNU3PjLvjt+3j5Hu2/nM99xTNw5XGgz8Se8RN6og3QX81BZ1pORusnoulA1
+U74PZiLATY9k+VB46hfNFm1C1/e36h1C7F2jEJrfXwZOJAsPH8OjkndU1+2ZM5pw
+AjOnckYocrBvhTfKE/0VT9NoTnxrWmDLFWmC6i9hx3RzqL+nHjzuKXWoyjx9L1p3
+jBsA1AHlU4QYuJkg8pomyvboaQJm3wQmnhktJYgt5W3hc3b3yKaKKVMRnfDsZrTg
+qFeTDS91ox/4wiSVWz9O50rfSEiCujQyRKvdhka3hi7g1148mOQIUmdF9A+x7xUS
+hR2xo9TNzpjivsmPCIy0jlKsL4bMKAOxyRcwuVPIrUf+hjMqKUA0lsvKaDiXw6Wb
+NkdKWjG33bgQUE7p+30m2JJHpG4zpHWdNzTO4vMnPcXFcYRchniY3aMItRF/g9KJ
+g4aGiKxOm9yeJKQAghKVih1GN+g7/dJ6CPFbCaR7zwBukY56I2epps7lLG2rNG/T
+l7nnT0bDXsgClWYlbinqucznEJSteyaM3l8Z1PW8zH+heXqYMwMVzEDZqAwg14Ui
+0fh0Xm6v+w6qF6sDanx08pbqA9Sul871XJ2jUIApXZRqqXSiw8fw4T9OVQp/AB+w
+nIqZWZeg+nGDHHoJ53On
+=3YsX
+-----END PGP SIGNATURE-----
