@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( dev-python/mock >=dev-python/python-novaclient-2.10.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/python-swiftclient[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-vcs/git
-DESCRIPTION=Python SDK for OpenStack/Rackspace APIs
-EAPI=5
-HOMEPAGE=https://github.com/openstack/python-novaclient
-IUSE=test python_targets_python2_7
-LICENSE=Apache-2.0
-RDEPEND=dev-python/httplib2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/keyring[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/prettytable >=dev-python/python-novaclient-2.10.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/python-swiftclient[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/rackspace-novaclient[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/simplejson[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-REQUIRED_USE=|| ( python_targets_python2_7 )
-SLOT=0
-_eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	git-2	e28f0d8a9b321431b1e699782851b827	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=8e37afc31bde12e5a96d583214c398e0
