@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyrax
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyrax/ChangeLog,v 1.20 2015/04/18 21:10:30 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyrax/ChangeLog,v 1.21 2015/04/19 19:53:44 alunduil Exp $
+
+  19 Apr 2015; Alex Brandt <alunduil@gentoo.org> -pyrax-9999.ebuild:
+  remove version 9999
 
   18 Apr 2015; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
   Drop unused USEflag in metadata.
